# ProjectTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
Core/: CMakeLists.txt
Scripts/: Setup-Linux.sh  Setup-Windows.bat
